# trust-test

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  LICENSE  README.md
.github/workflows/: ci.yml  governance.yml
docs/: governance-coverage.md  pytest-guide.md  test-driven-governance-manifesto.md  vitest-guide.md
examples/: pytest_example.py  vitest_example.ts
python/: pyproject.toml
python/src/: governance_coverage.py  snapshot_testing.py
python/src/pytest_governance/: __init__.py  assertions.py  benchmarks.py  fixtures.py  junit_output.py  matchers.py  plugin.py  trust_assertions.py
python/tests/: conftest.py  test_assertions.py
typescript/: package.json  tsconfig.json  tsup.config.ts
typescript/src/: governance-coverage.ts  helpers.ts  index.ts  matchers.ts  snapshot-testing.ts
