[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-trust-test"
version = "0.1.0"
description = "pytest plugin for AumOS governance testing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "MuVeraAI Corporation" }]
keywords = ["pytest", "plugin", "governance", "aumos", "trust", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=8.0",
    "aumos-governance>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[project.entry-points.pytest11]
governance = "pytest_governance.plugin"

[project.urls]
Homepage = "https://github.com/aumos-ai/trust-test"
Repository = "https://github.com/aumos-ai/trust-test"
"Bug Tracker" = "https://github.com/aumos-ai/trust-test/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_governance"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]
